# GPUSCALE

./: .env.example  .gitignore  LICENSE  README.md
.github/workflows/: build-bench.yml  deploy-results-disp.yml
bench-container/: .dockerignore  Dockerfile  Dockerfile.llamacpp  Dockerfile.vllm  bench-cpu.py  bench-vllm.py  bench-vllm.sh  entrypoint.sh  pyproject.toml  requirements.llamacpp.txt  requirements.txt  requirements.vllm.txt
bench-container/scripts/: collect_metrics.sh  pull_model.py  run_llama_cpp.sh  run_meta_native.py  run_vllm.py
bench-container/workloads/: default.json
dbops/: .gitignore  alembic.ini  pyproject.toml
dbops/alembic/: env.py
dbops/alembic/versions/: 001_initial_benchmark_results.py  002_gpu_prices.py  003_gpu_prices_read_policy.py
dbops/src/dbops/: __init__.py  cli.py  db.py  models.py  pricing.py  schema.sql  validate.py
results-disp/: package-lock.json  package.json
results-disp/src/app/: globals.css  layout.tsx  page.tsx
results-disp/src/app/report/: page.tsx
results-disp/src/components/: Filters.tsx  Normalizations.tsx  ResultsTable.tsx
results-disp/src/lib/: costs.ts  normalize.ts  prices.ts  queries.ts  supabase.ts  types.ts
s3-attach/: .gitignore  models.toml  pyproject.toml
s3-attach/src/s3_attach/: __init__.py  cleanup.py  cli.py  config.py  downloader.py  manifest.py  uploader.py
virt-runner/: .gitignore  pyproject.toml
virt-runner/src/virt_runner/: __init__.py  benchmark.py  cli.py  config.py  host_info.py  metrics.py  models.py
virt-runner/src/virt_runner/providers/: __init__.py  base.py  local.py  runpod.py  vast.py
virt-runner/workloads/: default.json
