[project]
name = "gpuscale-dbops"
version = "0.1.0"
description = "CLI tool for submitting and managing GPU benchmark results in Supabase"
requires-python = ">=3.11"
dependencies = [
    "sqlalchemy>=2.0.0",
    "alembic>=1.14.0",
    "psycopg2-binary>=2.9.0",
    "click>=8.1.0",
    "pydantic>=2.10.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
]

[project.scripts]
dbops = "dbops.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dbops"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
