[project]
name = "s3-attach"
version = "0.1.0"
description = "Model pool manager for GPUSCALE — downloads models and uploads to Wasabi S3"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.35.0",
    "huggingface-hub>=0.27.0",
    "httpx>=0.28.0",
    "click>=8.1.0",
    "rich>=13.9.0",
    "python-dotenv>=1.0.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "llama-models>=0.3.0",
]

[project.scripts]
s3-attach = "s3_attach.cli:cli"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/s3_attach"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
