[project]
name = "virt-runner"
version = "0.1.0"
description = "GPU benchmarking orchestrator for cloud and local GPU instances"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "typer>=0.15",
    "rich>=13.9",
    "paramiko>=3.5",
    "docker>=7.1",
    "pydantic>=2.10",
    "httpx>=0.28",
    "python-dotenv>=1.0.0",
    "boto3>=1.35.0",
]

[tool.uv.sources]
gpuscale-dbops = { path = "../dbops" }

[project.optional-dependencies]
db = [
    "gpuscale-dbops",
]

[project.scripts]
virt-runner = "virt_runner.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/virt_runner"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "TCH"]
